# pixie-claude-skills

./: .gitignore  CLAUDE.md  README.md  install.sh
firmware/: CMakeLists.txt  pixie.sh  sdkconfig
firmware/components/firefly-display/: CMakeLists.txt
firmware/components/firefly-display/src/: display.c
firmware/components/firefly-ethers/: CMakeLists.txt
firmware/components/firefly-ethers/include/: firefly-bip32.h  firefly-cbor.h  firefly-ecc.h  firefly-hash.h
firmware/components/firefly-ethers/src/: address.c  bip32.c  cbor.c  ecc.c  keccak.c
firmware/main/: CMakeLists.txt  main.c
firmware/main/apps/: app_ble_demo.c  app_handshake.c  app_template.c  app_valentine.c  pixie_app.h  pixie_runtime.c  pixie_runtime.h
skills/firefly-app-dev/: API_REFERENCE.md  PATTERNS.md  SKILL.md
skills/firefly-ble/: COMMANDS.md  SKILL.md
skills/firefly-build/: SKILL.md  TROUBLESHOOTING.md
skills/firefly-debug/: ERROR_PATTERNS.md  SKILL.md
skills/firefly-hardware/: SKILL.md
tools/pixie_ble_bridge/: pixie_ble_bridge.py  pixie_ble_bridge.sh  send_usdc_mcap.py  send_usdc_mcap.sh
